objects/vlocity_ins__CalculationProcedureVersion__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__ApplicableObject__c</fullName>
        <label>Applicable Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalculationProcedureId__c</fullName>
        <label>Calculation Procedure</label>
        <referenceTo>vlocity_ins__CalculationProcedure__c</referenceTo>
        <relationshipLabel>Vlocity Calculation Procedure Versions</relationshipLabel>
        <relationshipName>PricingProcedureVersions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Constants__c</fullName>
        <label>Constants</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CurrentStatus__c</fullName>
        <formula>IF(AND(vlocity_ins__StartDateTime__c &lt; NOW(), vlocity_ins__IsEnabled__c, OR(ISNULL(vlocity_ins__EndDateTime__c), vlocity_ins__EndDateTime__c &gt; NOW())), &quot;Active&quot;,IF(AND(NOT(ISNULL(vlocity_ins__EndDateTime__c)),vlocity_ins__EndDateTime__c &lt; NOW(), vlocity_ins__IsEnabled__c), &quot;Expired&quot;,IF(AND(vlocity_ins__StartDateTime__c &gt; NOW(), vlocity_ins__IsEnabled__c), &quot;Pending&quot;, &quot;Inactive&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnableLooping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Looping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the calculation procedure version. Used to identify the calculation procedure version across Salesforce instances.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InputBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input DataRaptor Bundle</label>
        <referenceTo>vlocity_ins__DRBundle__c</referenceTo>
        <relationshipLabel>Vlocity Calculation Procedure Versions</relationshipLabel>
        <relationshipName>VlocityCalculationProcedureVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InputDataRaptorBundleName__c</fullName>
        <formula>vlocity_ins__InputBundleId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Input DataRaptor Bundle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastSimulationInput__c</fullName>
        <label>Last Simulation Input</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LoopingSpecification__c</fullName>
        <label>Loop Specification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OutputBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output DataRaptor Bundle</label>
        <referenceTo>vlocity_ins__DRBundle__c</referenceTo>
        <relationshipLabel>Vlocity Calculation Procedure Versions (Output DataRaptor Bundle)</relationshipLabel>
        <relationshipName>VlocityCalculationProcedureVersions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OutputDataRaptorBundleName__c</fullName>
        <formula>vlocity_ins__OutputBundleId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Output DataRaptor Bundle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PostProcessorClass__c</fullName>
        <label>Post Processor Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PreProcessorClass__c</fullName>
        <label>Pre Processor Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StartDateTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Variables__c</fullName>
        <label>Variables</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VersionNumber__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vlocity Calculation Procedure Version</label>
    <nameField>
        <label>Calculation Procedure Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Procedure Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>